crates/jolt_java_syntax/tests/snapshots/corpus__syntax__parser__ordinary_import_declarations_expose_structured_names.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
import java.util.List;

class OrdinaryImport {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ImportDeclaration
      ImportKw "import" @ 0..6 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "java" @ 7..11
        Dot "." @ 11..12
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "util" @ 12..16
          Dot "." @ 16..17
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "List" @ 17..21
      Semicolon ";" @ 21..22
    ClassDeclaration
      ClassKw "class" @ 24..29 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "OrdinaryImport" @ 30..44 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 45..46
        ClassBodyMemberList
        RBrace "}" @ 46..47
  Eof "" @ 48..48 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
